# EasyCNN

./: CMakeLists.txt  LICENSE  README.md
CNN/: CMakeLists.txt
CNN/include/: CNN.h  Layer.h  Parameters.h
CNN/src/: CNN.cpp  Layer.cpp  Parameters.cpp
CNN/test/: test_CNN.cpp
EasyCNNApp/: CMakeLists.txt
EasyCNNApp/src/: EasyCNNApp.cpp
